<resources>
    <string name="app_name">Voltage Widget</string>

    <string name="batteryInfo">Battery Info</string>
    <string name="action_settings">Settings</string>
    <string name="voltage_widget_shared_pref">com.voidgreen.voltagewidget</string>
    <string name="battery_info_shared_pref_key">battery info</string>
    <string name="pref_text_size_key">text size</string>
    <string name="pref_text_size_title">Text size</string>
    <string name="pref_update_period_key">update period</string>
    <string name="pref_update_period_title">Update period</string>
    <string name="pref_text_color_key">text color</string>
    <string name="pref_text_color_title">Text color</string>

    <string name="pref_apply_button_key">apply button</string>
    <string name="pref_apply_button_title">Apply settings</string>

    <!-- Color picker-->
    <string name="dialog_color_picker">Color Picker</string>
    <string name="press_color_to_apply">Press on Color to apply</string>

</resources>
