<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <com.voidgreen.voltagewidget.NumberPickerPreference
        android:defaultValue="20"
        android:key="@string/pref_text_size_key"
        android:title="@string/pref_text_size_title" />
    <EditTextPreference
        android:defaultValue="1000"
        android:key="@string/pref_update_period_key"
        android:title="@string/pref_update_period_title" />
    <com.voidgreen.voltagewidget.colorpickerpreference.ColorPickerPreference
        alphaSlider="true"
        android:defaultValue="@color/orange"
        android:key="@string/pref_text_color_key"
        android:title="@string/pref_text_color_title" />

    <Preference
        android:key="@string/pref_apply_button_key"
        android:layout="@layout/preference_button"/>
    />

</PreferenceScreen>